@@ -70,3 +70,18 @@ TXGPIO=2
 
 # Queue length, the number of commands that are buffered when busy sending to previous command (5 by default).
 TXQUEUE=5
+
+# Control Signals Settings
+
+# For some transceivers (like Aurel RTX-MID-xV) switching from Tx to Rx can be speed up by quickly charge/ discharge the PLL circuit.
+# For this procedure to work, TXRXGPIO and ENABLEGPIO need to be enabled. See the datasheet for more information.
+# If 0 the PLL charge/ discharge procedure is disabled, if 1 this procedure is enabled
+PLLCHARGE=0
+
+# GPIO pin on raspberry pi to switch from TX to RX and vice versa on transceivers. 
+# Make 0 to disable or if you are using separate transmitters and receivers (27 by default)
+TXRXGPIO=27
+
+# GPIO pin on raspberry pi to enable the transceiver (or transmitter or receiver if applicable) 
+# Make 0 to disable (22 by default)
+ENABLEGPIO=22
